# project-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/src/api/: main.py
apps/web/: README.md
docs/: CI.md  DECISIONS.md  QUALITY.md  SETUP.md  STRUCTURE.md  WORKFLOWS.md
